# lcip

./: .gitignore  CITATION.cff  README.md  classifiers.py  get_data_model.bat  get_data_model.sh  get_stylegan.bat  get_stylegan.sh  main_basic.py  main_wafhq.py  pyproject.toml  requirements.txt  run.py  stack_test.py  vis_basic.py  vis_gan.py
gui/: __init__.py  gui_basic.py  gui_gan.py
invprojection/: NNinv.py  lamp.py
lcip/: __init__.py  lcip.py  utils.py
lcip_app/: __main__.py  cli.py  datasets.py  factories.py  gui_support.py  launchers.py  runtime.py  scalers.py  settings.py
models/wAFHQv2_paper/: z_paper_saved.npy
scripts/: download_file.py  get_dataset_and_model.py  myModification.patch
tests/: test_cli.py  test_gui_support.py  test_launchers.py  test_runtime.py  test_scalers.py  test_settings.py
