[project]
name = "lcip"
version = "0.1.0"
description = "Interactive loss-controlled inverse projection demos and research tooling."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "click>=8.0",
    "glfw==2.2.0",
    "imageio==2.9.0",
    "matplotlib==3.7.1",
    "ninja==1.10.2",
    "numpy==1.23.5",
    "pillow>=8.4.0",
    "PyOpenGL==3.1.5",
    "PySide6==6.5.2",
    "pyqtgraph==0.13.3",
    "requests==2.26.0",
    "scikit-learn==1.3.2",
    "scipy",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "tqdm==4.62.2",
    "umap-learn==0.5.3",
    "vispy==0.12.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
